# qtInventory

./: Makefile  main.cpp  qtInventory.pro
Lab8/Ejercicio1/: server.cpp  user.cpp
Lab8/Ejercicio2/: 2juego.cpp
Lab8/PDF/: Laboratorio 8 Informe.docx
Lab9/: CLASES QT.doc  Informe.odt
Lab9/DiagramasColaboracion/: Diagrama_Colaboracion_ActualizarUsuario.zargo  Diagrama_Colaboracion_AgregarProducto.zargo  Diagrama_Colaboracion_Autenticarse.zargo  Diagrama_Colaboracion_ConsultarInventarioGeneral.zargo  Diagrama_Colaboracion_ConsultarInventarioLocal.zargo  Diagrama_Colaboracion_ConsultarUsuario.zargo  Diagrama_Colaboracion_CrearUsuario.zargo  Diagrama_Colaboracion_EliminarrUsuario.zargo  Diagrama_Colaboracion_RetirarProducto.zargo  Diagrama_Colaboracion_TransferirProducto.zargo
Lab9/DiagramasSecuencia/: DiagramaSecuencia_AgregarProducto.xmi  (+17 more)
src/: AdministracionUsuario.h  AdministracionUsuario.ui  Administrar.h  CMakeLists.txt  Informacion_usuario_pendi.ui  Producto.h  Usuario.h  administracion_usuario.ui  autenticarse.cpp  autenticarse.h  interfaz.ui  main.cpp  qtInventory.pro  srv  test.sql  usr
src/include/: Act_bodega.h  Act_producto.h  Act_usuario.h  AdministracionProducto.h  AdministracionUsuario.h  Administracionbodega.h  Administrar.h  Bodega.h  Cliente.h  Consulta_inventario.h  Crear_bodega.h  Crear_producto.h  Crear_usuario.h  DBQueries.h  DataBase.h  DataStream.h  Info_usuario.h  Informacion_usuario_pendi.h  Interfaz.h  Producto.h  Servidor.h  Usuario.h  autenticarse.h  types.h
src/src/: Act_bodega.cpp  Act_producto.cpp  Act_usuario.cpp  AdministracionProducto.cpp  AdministracionUsuario.cpp  Administracionbodega.cpp  Administrar.cpp  Cliente.cpp  Consulta_inventario.cpp  Crear_bodega.cpp  Crear_producto.cpp  Crear_usuario.cpp  DBQueries.cpp  DataBase.cpp  DataStream.cpp  Info_usuario.cpp  Informacion_usuario_pendi.cpp  Interfaz.cpp  Servidor.cpp  autenticarse.cpp
src/test/: client.cpp  main.cpp  server.cpp
src/uis/: Act_bodega.ui  Act_producto.ui  Act_usuario.ui  AdministracionProducto.ui  AdministracionUsuario.ui  Administracionbodega.ui  Bodega.ui  Consulta_inventario.ui  Crear_bodega.ui  Crear_producto.ui  Crear_usuario.ui  Info_usuario.ui  actualizacion_bodega.ui  actualizacion_producto.ui  administrar.ui  autenticacion.ui  autenticarse.ui  consultar.ui  eliminar_bodega.ui  gestor_inventario.ui  informacion_bodega.ui  ingresar_producto.ui  salida.ui
(+24 files in other folders)
